--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,17 +15,14 @@
         tools:targetApi="31">
         <activity
             android:name=".RegistrationActivity"
-            android:exported="false"
-            android:label="Registration"/>
+            android:exported="false"/>
         <activity
             android:name=".MainActivity"
             android:exported="false"
-            android:label="Main Activity"
             android:theme="@style/Theme.MyApp.NoActionBar" />
         <activity
             android:name=".LoginActivity"
-            android:exported="true"
-            android:label="Login">
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
