--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,7 +51,20 @@ dependencies {
     implementation 'androidx.navigation:navigation-ui:2.4.2'
     implementation 'androidx.preference:preference:1.2.0'
     implementation 'com.google.firebase:firebase-database:20.0.5'
+    implementation 'androidx.room:room-common:2.4.2'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    def room_version = "2.4.2"
+
+    implementation "androidx.room:room-runtime:$room_version"
+    annotationProcessor "androidx.room:room-compiler:$room_version"
+
+    //ROOM
+    implementation "androidx.room:room-runtime:2.4.2"
+    implementation "androidx.room:room-ktx:2.4.2"
+    implementation "androidx.room:room-paging:2.4.2"
+
+    // Paging 3.0
+    implementation 'androidx.paging:paging-compose:1.0.0-alpha15'
 }
