--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,8 +14,14 @@
         android:theme="@style/Theme.MyApp"
         tools:targetApi="31">
         <activity
+            android:name=".AddVehicle"
+            android:exported="false" />
+        <activity
+            android:name=".AddRecord"
+            android:exported="false" />
+        <activity
             android:name=".RegistrationActivity"
-            android:exported="false"/>
+            android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="false"
