--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:label="Maintenance Tracker"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.MyApp"
+        android:theme="@style/MyAppTheme"
         tools:targetApi="31">
         <activity
             android:name=".AddVehicle"
@@ -25,7 +25,7 @@
         <activity
             android:name=".MainActivity"
             android:exported="false"
-            android:theme="@style/Theme.MyApp.NoActionBar">
+            android:theme="@style/MyAppTheme.NoActionBar">
         </activity>
         <activity
             android:name=".LoginActivity"
