--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,17 +1,19 @@
 plugins {
     id 'com.android.application'
     id 'com.google.gms.google-services'
+    id 'com.google.firebase.crashlytics'
+    id 'com.google.firebase.firebase-perf'
 }
 
 android {
-    compileSdk 32
+    compileSdk 33
 
     defaultConfig {
         applicationId "com.example.myapp"
         minSdk 21
-        targetSdk 32
+        targetSdk 33
         versionCode 1
-        versionName "1.0"
+        versionName "0.5"
 
         testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
 
@@ -36,33 +38,40 @@ android {
     buildFeatures {
         viewBinding true
     }
+    namespace 'com.example.myapp'
 }
 
+def core_version = "1.6.0"
 dependencies {
 
 
     //noinspection GradleCompatible
-    implementation 'androidx.appcompat:appcompat:1.5.1'
+    implementation 'androidx.appcompat:appcompat:1.6.1'
     //noinspection GradleCompatible
-    implementation 'com.google.android.material:material:1.7.0'
-    implementation 'androidx.annotation:annotation:1.5.0'
+    implementation 'com.google.android.material:material:1.8.0'
+    implementation 'androidx.annotation:annotation:1.6.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'androidx.lifecycle:lifecycle-livedata:2.5.1'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel:2.5.1'
-    implementation 'com.google.firebase:firebase-auth:21.1.0'
-    implementation 'androidx.appcompat:appcompat:1.5.1'
-    implementation 'com.google.android.material:material:1.7.0'
+    implementation 'androidx.lifecycle:lifecycle-livedata:2.6.1'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel:2.6.1'
+    implementation 'com.google.firebase:firebase-auth:21.2.0'
+    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'com.google.android.material:material:1.8.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.5.1'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.6.1'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.1'
     implementation 'androidx.navigation:navigation-fragment:2.5.3'
     implementation 'androidx.navigation:navigation-ui:2.5.3'
     implementation 'androidx.preference:preference:1.2.0'
     implementation 'com.google.firebase:firebase-database:20.1.0'
-    implementation 'androidx.room:room-common:2.4.3'
+    implementation 'androidx.room:room-common:2.5.1'
+    implementation 'com.google.firebase:firebase-crashlytics:18.3.6'
+    implementation 'com.google.firebase:firebase-analytics:21.2.1'
+    implementation 'com.google.firebase:firebase-perf:20.3.1'
+    //noinspection GradleCompatible
+    implementation 'com.android.support:cardview-v7:28.0.0'
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     def room_version = "2.4.2"
     implementation "pl.droidsonroids.gif:android-gif-drawable:1.2.22"
 
@@ -76,9 +85,17 @@ dependencies {
     implementation "androidx.room:room-paging:2.4.3"
 
     // Paging 3.0
-    //implementation 'androidx.paging:paging-compose:1.0.0-alpha17'
-    implementation 'com.google.android.material:material:1.8.0-alpha02'
-
+    implementation 'androidx.paging:paging-compose:1.0.0-alpha18'
     //noinspection GradleCompatible
-    implementation 'com.google.android.material:material:1.7.0'
+    implementation 'com.google.android.material:material:1.8.0'
+
+    //noinspection GradleDependency
+    implementation "androidx.core:core:$core_version"
+
+    implementation "androidx.compose.material3:material3:1.0.1"
+    implementation "androidx.compose.material3:material3-window-size-class:1.0.1"
+}
+
+configurations.implementation {
+    exclude group: 'org.jetbrains.kotlin', module: 'kotlin-stdlib-jdk8'
 }
