--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,47 +50,44 @@ dependencies {
     //noinspection GradleCompatible
     implementation 'androidx.appcompat:appcompat:1.6.1'
     //noinspection GradleCompatible
-    implementation 'com.google.android.material:material:1.9.0'
-    implementation 'androidx.annotation:annotation:1.6.0'
+    implementation 'androidx.annotation:annotation:1.7.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'androidx.lifecycle:lifecycle-livedata:2.6.1'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel:2.6.1'
-    implementation 'com.google.firebase:firebase-auth:22.1.1'
+    implementation 'androidx.lifecycle:lifecycle-livedata:2.7.0'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel:2.7.0'
+    implementation 'com.google.firebase:firebase-auth:22.3.1'
     implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.9.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.6.1'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.1'
-    implementation 'androidx.navigation:navigation-fragment:2.7.0'
-    implementation 'androidx.navigation:navigation-ui:2.7.0'
+    implementation 'com.google.android.material:material:1.11.0'
+    implementation 'androidx.navigation:navigation-fragment:2.7.7'
+    implementation 'androidx.navigation:navigation-ui:2.7.7'
     implementation 'androidx.preference:preference:1.2.1'
-    implementation 'com.google.firebase:firebase-database:20.2.2'
-    implementation 'com.google.firebase:firebase-crashlytics:18.4.0'
-    implementation 'com.google.firebase:firebase-analytics:21.3.0'
-    implementation 'com.google.firebase:firebase-perf:20.4.0'
+    implementation 'com.google.firebase:firebase-database:20.3.1'
+    implementation 'com.google.firebase:firebase-crashlytics:18.6.2'
+    implementation 'com.google.firebase:firebase-analytics:21.5.1'
+    implementation 'com.google.firebase:firebase-perf:20.5.2'
     //noinspection GradleCompatible
-    implementation 'com.android.support:cardview-v7:28.0.0'
+    implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'com.google.firebase:firebase-storage:20.2.1'
+    implementation 'com.google.firebase:firebase-storage:20.3.0'
+    implementation 'com.android.support:cardview-v7:28.0.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
+    //androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     implementation "pl.droidsonroids.gif:android-gif-drawable:1.2.22"
-    implementation 'androidx.compose.ui:ui-test-junit4:1.4.1'
+    implementation 'androidx.compose.ui:ui-test-junit4:1.6.2'
 
     // Paging 3.0
-    implementation 'androidx.paging:paging-compose:1.0.0-alpha18'
+    implementation 'androidx.paging:paging-compose:3.2.1'
     //noinspection GradleCompatible
-    implementation 'com.google.android.material:material:1.9.0'
+    implementation 'com.google.android.material:material:1.11.0'
 
     //noinspection GradleDependency
     implementation "androidx.core:core:$core_version"
 
-    implementation "androidx.compose.material3:material3:1.1.0"
-    implementation "androidx.compose.material3:material3-window-size-class:1.1.0"
+    implementation "androidx.compose.material3:material3:1.2.0"
+    implementation "androidx.compose.material3:material3-window-size-class:1.2.0"
 
     //ROOM
-    def room_version = "2.5.1"
+    def room_version = "2.6.1"
     implementation "androidx.room:room-runtime:$room_version"
     annotationProcessor "androidx.room:room-compiler:$room_version"
     // optional - RxJava2 support for Room
@@ -105,14 +102,14 @@ dependencies {
     implementation "androidx.room:room-paging:$room_version"
 
     // Import the Compose BOM
-    implementation platform('androidx.compose:compose-bom:2023.03.00')
+    implementation platform('androidx.compose:compose-bom:2024.02.01')
 
-    implementation "androidx.compose.ui:ui:1.4.1"
+    implementation "androidx.compose.ui:ui:1.6.2"
 
     // Android Studio Preview support
     implementation 'androidx.compose.ui:ui-tooling-preview'
     debugImplementation 'androidx.compose.ui:ui-tooling'
-    implementation "androidx.compose.ui:ui-tooling:1.4.1"
+    implementation "androidx.compose.ui:ui-tooling:1.6.2"
 
     // UI Tests
     androidTestImplementation 'androidx.compose.ui:ui-test-junit4'
@@ -126,9 +123,9 @@ dependencies {
     // Optional - Add window size utils
     implementation 'androidx.compose.material3:material3-window-size-class'
     // Optional - Integration with activities
-    implementation 'androidx.activity:activity-compose:1.7.0'
+    implementation 'androidx.activity:activity-compose:1.8.2'
     // Optional - Integration with ViewModels
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.6.1'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.7.0'
     // Optional - Integration with LiveData
     implementation 'androidx.compose.runtime:runtime-livedata'
     // Optional - Integration with RxJava
@@ -136,6 +133,12 @@ dependencies {
 
     implementation 'com.google.android.gms:play-services-cronet:18.0.1'
     implementation 'com.android.volley:volley:1.2.1'
+    implementation 'com.firebaseui:firebase-ui-storage:7.2.0'
+    implementation 'androidx.activity:activity:1.8.2'
+
+    // Glide
+    implementation 'com.github.bumptech.glide:glide:4.16.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
 }
 
 configurations.implementation {
