Update: - Version 2024.06.25 - Got rid of Task option on bottom nav menu. Just don't think it was worth putting in. May add back later if I feel like it. - Ran Code Cleanup and optimized the code some.
(Previous)
- Version 2024.03.08
- Added the ability to upload and retrieve photos from the cloud for records. This gives the user the ability to take a photo of their receipt or a screenshot of an invoice and keep track of it with their maintenance record.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:versionName="@string/version">
+    android:versionName="@string/version"
+    android:enableOnBackInvokedCallback="true"
+    tools:targetApi="tiramisu">
 
     <uses-feature
         android:name="android.hardware.camera"
@@ -29,7 +31,7 @@
         android:theme="@style/MyAppTheme"
         tools:targetApi="32">
         <activity
-            android:name=".ImageChooser"
+            android:name=".FileChooser"
             android:exported="false" />
         <activity
             android:name=".AddRecurringCheckup"
