--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,7 +10,7 @@ android {
 
     defaultConfig {
         applicationId "com.example.myapp"
-        minSdk 21
+        minSdk 23
         targetSdk 34
         versionCode 1
 
@@ -44,47 +44,46 @@ android {
     namespace 'com.example.myapp'
 }
 
-def core_version = "1.6.0"
+def core_version = '1.13.1'
 dependencies {
 
     //noinspection GradleCompatible
-    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'androidx.appcompat:appcompat:1.7.0'
     //noinspection GradleCompatible
-    implementation 'androidx.annotation:annotation:1.7.1'
+    implementation 'androidx.annotation:annotation:1.8.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'androidx.lifecycle:lifecycle-livedata:2.7.0'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel:2.7.0'
-    implementation 'com.google.firebase:firebase-auth:22.3.1'
-    implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.11.0'
+    implementation 'androidx.lifecycle:lifecycle-livedata:2.8.2'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel:2.8.2'
+    implementation 'com.google.firebase:firebase-auth:23.0.0'
+    implementation 'androidx.appcompat:appcompat:1.7.0'
+    implementation 'com.google.android.material:material:1.12.0'
     implementation 'androidx.navigation:navigation-fragment:2.7.7'
     implementation 'androidx.navigation:navigation-ui:2.7.7'
     implementation 'androidx.preference:preference:1.2.1'
-    implementation 'com.google.firebase:firebase-database:20.3.1'
-    implementation 'com.google.firebase:firebase-crashlytics:18.6.2'
-    implementation 'com.google.firebase:firebase-analytics:21.5.1'
-    implementation 'com.google.firebase:firebase-perf:20.5.2'
+    implementation 'com.google.firebase:firebase-database:21.0.0'
+    implementation 'com.google.firebase:firebase-crashlytics:19.0.2'
+    implementation 'com.google.firebase:firebase-analytics:22.0.2'
+    implementation 'com.google.firebase:firebase-perf:21.0.1'
     //noinspection GradleCompatible
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'com.google.firebase:firebase-storage:20.3.0'
-    implementation 'com.android.support:cardview-v7:28.0.0'
+    implementation 'com.google.firebase:firebase-storage:21.0.0'
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.test.ext:junit:1.2.0'
     //androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
-    implementation "pl.droidsonroids.gif:android-gif-drawable:1.2.22"
-    implementation 'androidx.compose.ui:ui-test-junit4:1.6.2'
+    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.28'
+    implementation 'androidx.compose.ui:ui-test-junit4:1.6.8'
 
     // Paging 3.0
-    implementation 'androidx.paging:paging-compose:3.2.1'
+    implementation 'androidx.paging:paging-compose:3.3.0'
     //noinspection GradleCompatible
-    implementation 'com.google.android.material:material:1.11.0'
+    implementation 'com.google.android.material:material:1.12.0'
 
     //noinspection GradleDependency
     implementation "androidx.core:core:$core_version"
 
-    implementation "androidx.compose.material3:material3:1.2.0"
-    implementation "androidx.compose.material3:material3-window-size-class:1.2.0"
+    implementation "androidx.compose.material3:material3:1.2.1"
+    implementation "androidx.compose.material3:material3-window-size-class:1.2.1"
 
     //ROOM
     def room_version = "2.6.1"
@@ -102,14 +101,13 @@ dependencies {
     implementation "androidx.room:room-paging:$room_version"
 
     // Import the Compose BOM
-    implementation platform('androidx.compose:compose-bom:2024.02.01')
-
-    implementation "androidx.compose.ui:ui:1.6.2"
+    implementation platform('androidx.compose:compose-bom:2024.06.00')
+    implementation 'androidx.compose.ui:ui:1.6.8'
 
     // Android Studio Preview support
     implementation 'androidx.compose.ui:ui-tooling-preview'
     debugImplementation 'androidx.compose.ui:ui-tooling'
-    implementation "androidx.compose.ui:ui-tooling:1.6.2"
+    implementation 'androidx.compose.ui:ui-tooling:1.6.8'
 
     // UI Tests
     androidTestImplementation 'androidx.compose.ui:ui-test-junit4'
@@ -123,22 +121,22 @@ dependencies {
     // Optional - Add window size utils
     implementation 'androidx.compose.material3:material3-window-size-class'
     // Optional - Integration with activities
-    implementation 'androidx.activity:activity-compose:1.8.2'
+    implementation 'androidx.activity:activity-compose:1.9.0'
     // Optional - Integration with ViewModels
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.7.0'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.8.2'
     // Optional - Integration with LiveData
     implementation 'androidx.compose.runtime:runtime-livedata'
     // Optional - Integration with RxJava
     implementation 'androidx.compose.runtime:runtime-rxjava2'
 
-    implementation 'com.google.android.gms:play-services-cronet:18.0.1'
+    implementation 'com.google.android.gms:play-services-cronet:18.1.0'
     implementation 'com.android.volley:volley:1.2.1'
-    implementation 'com.firebaseui:firebase-ui-storage:7.2.0'
-    implementation 'androidx.activity:activity:1.8.2'
+    implementation 'com.firebaseui:firebase-ui-storage:8.0.2'
+    implementation 'androidx.activity:activity:1.9.0'
 
     // Glide
     implementation 'com.github.bumptech.glide:glide:4.16.0'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.16.0'
 }
 
 configurations.implementation {
